# FinApp

./: Cargo.toml  README.md
data_fake/: account_table.csv  create_fake_data.py  entity_table.csv  exchange_rate_CHFEUR.csv  exchange_rate_SEKEUR.csv  expense_table.csv  fund_movement_table.csv  funds_evolution_table.csv  income_table.csv  party_table.csv
src/: classes.rs  from_google_finance.py  lib.rs  main.rs  tables.rs
src/modules/: currency_exchange.rs  database.rs  financial.rs  handlers.rs  mod.rs  tables.rs
src/modules/database/: mod.rs  plotter.rs  summaries.rs  views.rs
src/modules/gui/: browsing.rs  inputting.rs  mod.rs  plotting.rs  summarizing.rs
src/tests/: currency_exchange.rs  database.rs  financial.rs  mod.rs  tables.rs  test_helpers.rs
