[package]
name = "FinApp"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
polars = { version = "0.45.0", features = ["lazy", "temporal", "dynamic_group_by", "cum_agg"] }
eframe = { version = "0.29", features = ["default",
    "default_fonts",
    "glow",
] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["datepicker"] }
egui_autocomplete = "8.0.0"
env_logger = { version = "0.11.6", default-features = false, features = ["auto-color", "humantime"] }
strum = "0.26"
strum_macros = "0.26"
derivative = "2.2.0"
reqwest = { version = "0.12", features = ["blocking"] }
plotters = "0.3.7"