[package]
name = "FinApp"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
polars = { version = "0.46", features = ["lazy",
    "temporal", 
	"dynamic_group_by", 
	"cum_agg", 
	"round_series", 
	"is_between",
	"abs",
] }
eframe = { version = "0.31", features = ["default",
    "default_fonts",
    "glow",
] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["datepicker", "all_loaders"] }
egui_autocomplete = "10.2"
env_logger = { version = "0.11.6", default-features = false, features = ["auto-color", "humantime"] }
strum = "0.27"
strum_macros = "0.27"
derivative = "2.2.0"
reqwest = { version = "0.12", features = ["blocking"] }
plotters = "0.3.7"
image = { version = "0.25", features = ["jpeg", "png"] }
